fixed onclick in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div id="redLanding" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
                 <div id="black2Landing" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
             </div>
-            <button id="returnButton" onClick='returnDots()'>Reset</button>
+            <button id="returnButton" onclick="returnDots()">Reset</button>
         </div>
         
     </div>
