fixed some mobile issues with galaxy s7,9,10; modified messaging more to fit scenario and screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <h1>THE INSPIRINGAPPS LOGO</h1>
             <h2 id="confirm">From here you will witness dot moving like never before!<br/> Complete the InspiringApps logo
-                by putting the dots in their correct place!<br/> Please use portrait mode only.
+                by putting the dots in their correct place!<br/> Please use portrait mode only if on mobile.
             </h2>
         </header>
         <div id="container" class="gameBoard">
